# sboost

./: .gitignore  CMakeLists.txt  README.md  SboostConfig.cmake.in  bitmap_writer.cc  bitmap_writer.h  bitmap_writer_test.cc  byteutils.cc  byteutils.h  byteutils_test.cc  loader.cc  loader.h  loader_benchmark.cc  sboost.cc  sboost.h  sboost_benchmark.cc  sboost_runner.cc  sboost_test.cc  simd.cc  simd.h  tool.cc  unpacker.cc  unpacker.h  unpacker_benchmark.cc  unpacker_test.cc
cmake_modules/: Thirdparty.cmake
encoding/: deltabp.cc  deltabp.h  deltabp_test.cc  encoding_utils.cc  encoding_utils.h  rlehybrid.cc  rlehybrid.h  rlehybrid_test.cc
resources/testres/: lineitem  lineitem2  nation  orders
resources/testres/encoding/: comment.binary  deltabp
resources/testres/sboost/: deltabpcontent  deltabpval  rlecontent
